--- a/index.html
+++ b/index.html
@@ -137,7 +137,6 @@ Author URL: http://w3layouts.com
                     <h3 class="title-style mb-sm-3 mb-2">
                         영양소 검출 실험 결과가 잘 안나오나요?</h3>
                     <p>NutriCheck AI를 시작하세요!</p><br><button type="button" class="button" onclick="init()">시작하기(영양소별 수치로 표현)</button>     <a href="p5.html"><button type="button" class="button">시작하기2(검출 결과 레이블로 확인)</button></a> <!--버튼--><br><br>
-                    <a href="https://www.notion.so/NutriCheck-AI-98982fc06f364828b38a8e24b844e054"><button type="button" class="button">Android 앱 사용방법</button></a><br><br>
                     웹캠(또는 카메라)을 완료된 영양소 검출 샘플에 비춰주세요!<br>
                     검출 결과는 0.5초마다 업데이트됩니다!
                     <br>
@@ -218,6 +217,7 @@ cur = new Date().getTime();
     </section>
     <!-- //about-2 section -->
     <div class='onesignal-customlink-container'></div>
+    <a href="https://www.notion.so/NutriCheck-AI-98982fc06f364828b38a8e24b844e054"><button type="button" class="button">Android 앱 사용방법</button></a>
     <!-- footer -->
     <footer class="w3l-footer-22 position-relative mt-5 pt-5">
         <div class="footer-sub">
